# VoxGuard

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_TASKS.md  CONTRIBUTING.md  Makefile  README.md  batch-run-anti-masking.sh  commitlint.config.js  gateway.rs  mcp.json  package.json  pnpm-workspace.yaml  requirements.txt  turbo.json
.github/: CODEOWNERS  copilot-instructions.md  copilot-setup-steps.yml  pull_request_template.md
.github/workflows/: aidd-tier-guardrails.yml  alignment-scan.yml  android-ci.yml  autonomous-codegen.yml  bidirectional-sync.yml  claude.yml  (+15 more)
.husky/: commit-msg  pre-commit
.repo-index/: manifest.yaml
anti-call-masking/: .env.example  .gitignore  .trivyignore  Dockerfile  Dockerfile.freeswitch-sim  Jenkinsfile  README.md  daily_upload.sh  docker-compose.yml  lib.rs  metrics.rs  middleware.go  prometheus.yml  websocket.rs
anti-call-masking-platform/: config.go  datasources.yml  main.rs
anti-call-masking/detection-service-rust/: Cargo.toml
anti-call-masking/detection-service-rust/docs/: PERFORMANCE.md
anti-call-masking/detection-service-rust/src/: lib.rs  main.rs  ports.rs
anti-call-masking/detection-service-rust/src/adapters/: dragonfly.rs  questdb.rs
anti-call-masking/detection-service-rust/src/application/: queries.rs
anti-call-masking/detection-service-rust/src/domain/: events.rs  mod.rs
anti-call-masking/detection-service-rust/src/domain/aggregates/: mod.rs
batch/: run_all_platforms.sh
config/: ideal-customer-profile.yaml  prometheus-lumadb.yml
docs/: AIDD_APPROVAL_TIERS.md  AI_CHANGELOG.md  AI_CHANGELOG_UPDATE.md  API_REFERENCE.md  ARCHITECTURE.md  BRD.md  CICD_PIPELINE.md  COMPLIANCE_MATRIX.md  COPILOT_PLAYBOOK.md  COPILOT_USAGE.md  DASHBOARD.md  DATA_RETENTION_ARCHIVAL.md  DEPLOYMENT.md  DEVELOPER_MANUAL.md  DISASTER_RECOVERY.md  EA_ROADMAP.md  ENVIRONMENT_SETUP.md  FAQ.md  GAP_ANALYSIS_2026-02-17.md  MULTI_REGION_DEPLOYMENT.md  OBSERVABILITY.md  PENETRATION_TESTING.md  PERFORMANCE_BENCHMARKS.md  PRD.md  PRODUCTION_HARDENING.md  PROJECT_CHARTER.md  README.md  SECURITY_HARDENING.md  VOICE_SWITCH_INTEGRATION.md  VOXGUARD_TECHNICAL_DOCUMENTATION.md  acceptance-criteria.md  database-schema.md  enterprise-architecture.md  gap-analysis.md  hardware-requirements.md  hld.md  lld.md  release-notes.md  software-architecture.md  software-requirements.md  (+13 more)
hasura/: config.yaml
mcp-server/: repo-operations.py  sales_server.py
monitoring/: validate-monitoring.sh
prompts/: 01-Repository-Structure.md
scripts/: architecture_audit.py  market_scan.py
security/: trivy.yaml
services/detection-engine/: Cargo.toml  Dockerfile
services/detection-engine/benches/: detection_benchmark.rs
services/detection-engine/src/: main.rs  metrics.rs
services/detection-engine/src/application/: alert_service.rs  commands.rs  detection_service.rs  mod.rs
services/detection-engine/src/domain/: value_objects.rs
services/detection-engine/src/domain/aggregates/: threat_level.rs
services/detection-engine/tests/: contract_tests.rs  integration_fraud_detection.rs  property_based_tests.rs
voxguard/: .env.example  Cargo.toml  README.md  alerts.rs  docker-compose.yml  health.rs  init-yugabyte.sh
voxguard/anti-call-masking-platform/: Dockerfile  database.go  detection.rs  go.mod  mnp.rs  mod.rs  models.go  opensips-acm.cfg
voxguard/anti-call-masking-platform/internal/domain/fraud/: fraud_test.go
voxguard/anti-call-masking-platform/internal/domain/fraud/entity/: alert.go
voxguard/database/yugabyte/: 002_extended_schema.sql
voxguard/detection-service-rust/src/: config.rs
voxguard/detection-service-rust/src/adapters/: mod.rs  yugabyte.rs
voxguard/detection-service-rust/src/domain/: errors.rs
voxguard/detection-service-rust/src/domain/aggregates/: call.rs  fraud_alert.rs  gateway.rs
voxguard/docs/: INTEGRATION_PLAN.md
voxguard/docs/manuals/: ANALYST_MANUAL.md  API_DEVELOPER_MANUAL.md  OPERATIONS_MANUAL.md  SOC_ANALYST_MANUAL.md
voxguard/docs/presentations/exports/pptx/: NCC_CAPABILITIES_DEMO.pptx
voxguard/docs/scripts/: convert_presentations.py
voxguard/docs/technical/: HARDWARE_REQUIREMENTS.md
voxguard/docs/training/: TRAINING_OVERVIEW.md  VIDEO_TRAINING_SCRIPTS.md
voxguard/docs/training/presentations/: 01-system-overview.html
voxguard/docs/training/presentations/assets/css/: reveal-theme.css
voxguard/docs/training/presentations/exports/pptx/: 03-soc-analyst-training.pptx
voxguard/frontend/: package-lock.json  package.json
voxguard/frontend/src/components/charts/: ColumnChartWrapper.tsx  LineChartWrapper.tsx
voxguard/frontend/src/components/common/: index.ts
voxguard/frontend/src/graphql/queries/: users.ts
voxguard/frontend/src/hooks/: useAlertFilters.ts  useRealTimeAlerts.ts
voxguard/frontend/src/pages/dashboard/components/: SeverityPieChart.tsx
voxguard/frontend/src/pages/login/: index.tsx
voxguard/frontend/src/providers/: access-control.ts
voxguard/frontend/src/resources/alerts/: edit.tsx  show.tsx
voxguard/frontend/src/resources/users/: create.tsx  list.tsx
voxguard/grafana/: dashboard.json
voxguard/integration/voice-switch-im/: README.md  router.go.patch
voxguard/lumadb/: database.py  detection.py  models.py
voxguard/mobile/lib/: main.dart
voxguard/mobile/lib/screens/: home_screen.dart
voxguard/scripts/: run_tests.q  validate.sh
voxguard/security/: semgrep.yaml
voxguard/sip-processor/: pyproject.toml
voxguard/sip-processor/app/domain/events/: events.py
voxguard/sip-processor/app/domain/repositories/: repositories.py
voxguard/sip-processor/app/domain/services/: services.py
voxguard/sip-processor/app/inference/: __init__.py  model.py
voxguard/sip-processor/app/sentinel/: performance.py
voxguard/sip-processor/app/signaling/: __init__.py  parser.py
voxguard/sip-processor/tests/: test_inference.py  test_signaling.py
voxguard/sip-processor/tests/domain/: test_entities.py
voxguard/sip-processor/tests/sentinel/: test_parser.py  test_phase3_integration.py  test_phase4_production.py
voxguard/verification/: stir_shaken.py
web/: package-lock.json
(+422 files in other folders)
