[package]
name = "detection-service"
version = "2.0.0"
edition = "2021"
authors = ["BillyRonks Team <dev@billyronks.com>"]
description = "High-performance Anti-Call Masking Detection Engine with DDD Architecture"

[lib]
name = "acm_detection"
path = "src/lib.rs"

[[bin]]
name = "acm-detection-service"
path = "src/main.rs"

[dependencies]
# Web Framework
actix-web = "4.4"
actix-rt = "2.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - YugabyteDB via SQLx
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }

# Cache - DragonflyDB/Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# QuestDB - Time-series via ILP and PostgreSQL
questdb-rs = "3.0"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for entity IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client for ClickHouse
reqwest = { version = "0.11", features = ["json"] }

# Environment
dotenv = "0.15"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Async traits
async-trait = "0.1"

[dev-dependencies]
# Testing
mockall = "0.12"
tokio-test = "0.4"
fake = { version = "2.9", features = ["derive", "chrono"] }
rstest = "0.18"
# Property-based testing
quickcheck = "1.0"
quickcheck_macros = "1.0"
# Coverage (for documentation, actual coverage via cargo-tarpaulin)
# Run: cargo tarpaulin --out Html --output-dir coverage

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
